tests/baselines/reference/complicatedPrivacy.errors.txt
complicatedPrivacy.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(2,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(11,24): error TS1054: A 'get' accessor cannot have parameters.
complicatedPrivacy.ts(35,6): error TS2693: 'number' only refers to a type, but is being used as a value here.
complicatedPrivacy.ts(44,5): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(70,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(71,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(73,55): error TS2694: Namespace 'mglo5' has no exported member 'i6'.
complicatedPrivacy.ts(79,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(82,13): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(84,24): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
complicatedPrivacy.ts(95,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== complicatedPrivacy.ts (12 errors) ====
    module m1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m2 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    
            export function f1(c1: C1) {
            }
            export function f2(c2: C2) {
            }
    
            export class C2 implements m3.i3 {
                public get p1(arg) {
                           ~~
!!! error TS1054: A 'get' accessor cannot have parameters.
                    return new C1();
                }
    
                public set p1(arg1: C1) {
                }
    
                public f55() {
                    return "Hello world";
                }
            }
        }
    
        export function f2(arg1: { x?: C1, y: number }) {
        }
    
        export function f3(): {
            (a: number) : C1;
        } {
            return null;
        }
    
        export function f4(arg1: 
        {
        [number]: C1; // Used to be indexer, now it is a computed property
         ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
        }) {
        }
    
    
        export function f5(arg2: {
            new (arg1: C1) : C1
        }) {
        }
        module m3 {
        ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            function f2(f1: C1) {
            }
    
            export interface i3 {
                f55(): string;
            }
        }
    
        class C1 {
        }
    
        interface i {
            x: number;
        }
    
        export class C5 implements i {
            public x: number;
        }
    
        export var v2: C1[];
    }
    
    class C2 {
    }
    
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
            export class c_pr  implements mglo5.i5, mglo5.i6 {
                                                          ~~
!!! error TS2694: Namespace 'mglo5' has no exported member 'i6'.
                f1() {
                    return "Hello";
                }
            }
            
            module m4 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                class C {
                }
                module m5 {
                ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                    
                    export module m6 {
                           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                        function f1() {
                            return new C();
                        }
                    }
                }
            }
    
        }
    }
    
    module mglo5 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface i5 {
            f1(): string;
        }
    
        interface i6 {
            f6(): number;
        }
    }
    